--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,7 @@
     <button id="join-room">Join Room</button>
     
     <div id="game-area" style="display: none;">
-        <h2>Game Room</h2>
-        <p>Answer the question and vote for who is AI!</p>
+        <h2 id="question-text">Waiting for question...</h2>
         <input id="answer" type="text" placeholder="Your Answer" />
         <button id="submit-answer">Submit Answer</button>
         <button id="vote">Vote for AI</button>
@@ -22,97 +21,104 @@
     </div>
 
     <script>
-    const backendURL = "https://who-is-2.onrender.com";
-    let socket = null;
-    let roomId = null;
-    let playerId = "player-" + Math.floor(Math.random() * 1000);
+        const backendURL = "https://who-is-2.onrender.com"; // Backend API
+        let socket = null;
+        let roomId = null;
+        let playerId = "player-" + Math.floor(Math.random() * 1000);
 
-    document.getElementById("create-room").addEventListener("click", async () => {
-        console.log("Creating game room...");
-        try {
-            const response = await fetch(`${backendURL}/create_room`);
-            const data = await response.json();
-            if (data.room_id) {
-                roomId = data.room_id;
-                document.getElementById("room-id").value = roomId;
-                alert("Room Created! Share this ID: " + roomId);
+        document.getElementById("create-room").addEventListener("click", async () => {
+            console.log("Creating game room...");
+            try {
+                const response = await fetch(`${backendURL}/create_room`);
+                const data = await response.json();
+                if (data.room_id) {
+                    roomId = data.room_id;
+                    document.getElementById("room-id").value = roomId;
+                    alert("Room Created! Share this ID: " + roomId);
+                    connectToWebSocket(roomId);
+                    document.getElementById("game-area").style.display = "block";
+
+                    // Fetch the first question after room creation
+                    const gameStartResponse = await fetch(`${backendURL}/start_game/${roomId}`);
+                    const gameStartData = await gameStartResponse.json();
+                    document.getElementById("question-text").innerText = gameStartData.question || "Question failed to load!";
+                } else {
+                    alert("Error creating room. Try again.");
+                }
+            } catch (error) {
+                console.error("Error creating room:", error);
+                alert("Failed to create room. Backend might be down.");
+            }
+        });
+
+        document.getElementById("join-room").addEventListener("click", async () => {
+            roomId = document.getElementById("room-id").value;
+            if (roomId) {
+                alert("Joining Room: " + roomId);
                 connectToWebSocket(roomId);
                 document.getElementById("game-area").style.display = "block";
 
-                // Start the game by asking the first question
-                await fetch(`${backendURL}/start_game/${roomId}`);
+                // Fetch the current question for late joiners
+                const response = await fetch(`${backendURL}/join_room/${roomId}`);
+                const data = await response.json();
+                if (data.question) {
+                    document.getElementById("question-text").innerText = data.question;
+                }
             } else {
-                alert("Error creating room. Try again.");
+                alert("Enter a valid room ID.");
             }
-        } catch (error) {
-            console.error("Error creating room:", error);
-            alert("Failed to create room. Backend might be down.");
+        });
+
+        function connectToWebSocket(roomId) {
+            socket = new WebSocket(`wss://who-is-2.onrender.com/ws/${roomId}/${playerId}`);
+
+            socket.onopen = function() {
+                console.log("Connected to WebSocket!");
+            };
+
+            socket.onmessage = function(event) {
+                const message = JSON.parse(event.data);
+                console.log("Message received:", message);
+
+                // ✅ Show the question when received
+                if (message.type === "new_question") {
+                    document.getElementById("question-text").innerText = message.question;
+                }
+            };
+
+            socket.onerror = function(error) {
+                console.error("WebSocket error:", error);
+                alert("WebSocket connection error!");
+            };
+
+            socket.onclose = function() {
+                console.log("Disconnected from WebSocket");
+            };
         }
-    });
 
-    document.getElementById("join-room").addEventListener("click", () => {
-        roomId = document.getElementById("room-id").value;
-        if (roomId) {
-            alert("Joining Room: " + roomId);
-            connectToWebSocket(roomId);
-            document.getElementById("game-area").style.display = "block";
-        } else {
-            alert("Enter a valid room ID.");
-        }
-    });
-
-    function connectToWebSocket(roomId) {
-        socket = new WebSocket(`wss://who-is-2.onrender.com/ws/${roomId}/${playerId}`);
-
-        socket.onopen = function() {
-            console.log("Connected to WebSocket!");
-        };
-
-        socket.onmessage = function(event) {
-            const message = JSON.parse(event.data);
-            console.log("Message received:", message);
-
-            // Display question when received
-            if (message.type === "new_question") {
-                document.getElementById("game-area").innerHTML = `<h2>${message.question}</h2>`;
+        document.getElementById("submit-answer").addEventListener("click", async () => {
+            const answer = document.getElementById("answer").value;
+            if (!answer) {
+                alert("Enter an answer first!");
+                return;
             }
-        };
+            if (socket && socket.readyState === WebSocket.OPEN) {
+                socket.send(JSON.stringify({ action: "submit_answer", answer: answer }));
+            } else {
+                alert("Not connected to game room!");
+            }
+        });
 
-        socket.onerror = function(error) {
-            console.error("WebSocket error:", error);
-            alert("WebSocket connection error!");
-        };
+        document.getElementById("vote").addEventListener("click", async () => {
+            const voteFor = prompt("Enter the player ID you think is AI:");
+            if (!voteFor) return;
 
-        socket.onclose = function() {
-            console.log("Disconnected from WebSocket");
-        };
-    }
-
-    document.getElementById("submit-answer").addEventListener("click", async () => {
-        const answer = document.getElementById("answer").value;
-        if (!answer) {
-            alert("Enter an answer first!");
-            return;
-        }
-        if (socket && socket.readyState === WebSocket.OPEN) {
-            socket.send(JSON.stringify({ action: "submit_answer", answer: answer }));
-        } else {
-            alert("Not connected to game room!");
-        }
-    });
-
-    document.getElementById("vote").addEventListener("click", async () => {
-        const voteFor = prompt("Enter the player ID you think is AI:");
-        if (!voteFor) return;
-
-        if (socket && socket.readyState === WebSocket.OPEN) {
-            socket.send(JSON.stringify({ action: "submit_vote", vote: voteFor }));
-        } else {
-            alert("Not connected to game room!");
-        }
-    });
-</script>
-
-
+            if (socket && socket.readyState === WebSocket.OPEN) {
+                socket.send(JSON.stringify({ action: "submit_vote", vote: voteFor }));
+            } else {
+                alert("Not connected to game room!");
+            }
+        });
+    </script>
 </body>
 </html>
